--- a/src/Viam.Client/Viam.Client.csproj
+++ b/src/Viam.Client/Viam.Client.csproj
@@ -39,48 +39,46 @@
 		</WeaverConfiguration>
 	</PropertyGroup>
 	<ItemGroup>
-
-		<Content Include="runtimes\native\win-x64\libviam_rust_utils.dll">
+    <None Include="runtimes\win-x64\native\libviam_rust_utils.dll">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\win-x64\native\</PackagePath>
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
+		</None>
 
-		<Content Include="runtimes\native\linux-x64\libviam_rust_utils.so">
+		<None Include="runtimes\linux-x64\native\libviam_rust_utils.so">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\linux-x64\native\</PackagePath>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 
-		<Content Include="runtimes\native\linux-arm64\libviam_rust_utils.so">
+		<None Include="runtimes\linux-arm64\native\libviam_rust_utils.so">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\linux-arm64\native\</PackagePath>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 
-		<Content Include="runtimes\native\linux-musl-x64\libviam_rust_utils.so">
+		<None Include="runtimes\linux-musl-x64\native\libviam_rust_utils.so">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\linux-musl-x64\native\</PackagePath>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 
-		<Content Include="runtimes\native\linux-musl-arm64\libviam_rust_utils.so">
+		<None Include="runtimes\linux-musl-arm64\native\libviam_rust_utils.so">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\linux-musl-arm64\native\</PackagePath>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 
-		<Content Include="runtimes\native\osx-arm64\libviam_rust_utils.dylib">
+		<None Include="runtimes\osx-arm64\native\libviam_rust_utils.dylib">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\osx-arm64\native\</PackagePath>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 
-		<Content Include="runtimes\native\osx-x64\libviam_rust_utils.dylib">
+		<None Include="runtimes\osx-x64\native\libviam_rust_utils.dylib">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\osx-x64\native\</PackagePath>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 </Project>
