--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -40,31 +40,41 @@ jobs:
 
           echo "Using version: $VERSION"
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+      - name: Set artifact name from project path
+        id: set_artifact
+        run: |
+            PROJECT_PATH="${{ matrix.project }}"
+            VERSION="${{ steps.set_version.outputs.version }}"
+
+            # Extract "Viam.Client" from "src/Viam.Client/Viam.Client.csproj"
+            PACKAGE_ID=$(basename "$PROJECT_PATH" .csproj)
+            ARTIFACT_BASE="${PACKAGE_ID}.${VERSION}"
+
+            echo "PACKAGE_ID=$PACKAGE_ID"
+            echo "ARTIFACT_BASE=$ARTIFACT_BASE"
+
+            echo "name=$PACKAGE_ID" >> "$GITHUB_OUTPUT"
+            echo "base=$ARTIFACT_BASE" >> "$GITHUB_OUTPUT"
 
       - name: Build & Pack
-        run: dotnet pack -c Release \
-          /p:Version=${{ steps.set_version.outputs.version }} \
-          /p:PackageVersion=${{ steps.set_version.outputs.version }} \
-          -o ./artifacts ${{ matrix.project }}
+        run: dotnet pack -c Release /p:Version=${{ steps.set_version.outputs.version }} /p:PackageVersion=${{ steps.set_version.outputs.version }} /p:SymbolPackageFormat=snupkg /p:IncludeSymbols=true -o "${{ github.workspace }}/artifacts" ${{ matrix.project }}
 
-      - name: Upload NuGet packages
+      - name: Upload NuGet package
         uses: actions/upload-artifact@v4
         with:
-          name: nuget-packages-${{ matrix.project }}
-          path: ./artifacts/*.nupkg
+          name: ${{ steps.set_artifact.outputs.base }}.nupkg
+          path: "${{ github.workspace }}/artifacts/${{ steps.set_artifact.outputs.base }}.nupkg"
 
-      - name: Remove Symbols Packages (for GitHub feed)
-        if: startsWith(github.ref, 'refs/tags/v') && github.repository != 'viamrobotics/viam-dotnet-sdk'
-        run: rm -f ./artifacts/*symbols.nupkg
+      - name: Upload NuGet symbols package
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ steps.set_artifact.outputs.base }}.symbols.nupkg
+          path: "${{ github.workspace }}/artifacts/${{ steps.set_artifact.outputs.base }}.snupkg"
 
       - name: Push to GitHub Packages
-        if: startsWith(github.ref, 'refs/tags/v') && github.repository != 'viamrobotics/viam-dotnet-sdk'
-        run: dotnet nuget push ./artifacts/*.nupkg \
-          --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" \
-          --api-key "${{ secrets.GITHUB_TOKEN }}"
+        if: github.repository != 'viamrobotics/viam-dotnet-sdk'
+        run: dotnet nuget push "${{ github.workspace }}/artifacts/${{ steps.set_artifact.outputs.base }}.nupkg" --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" --api-key "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Push to NuGet.org
         if: startsWith(github.ref, 'refs/tags/v') && github.repository == 'viamrobotics/viam-dotnet-sdk'
-        run: dotnet nuget push ./artifacts/*.nupkg \
-          --source "https://api.nuget.org/v3/index.json" \
-          --api-key "${{ secrets.NUGET_API_KEY }}"
+        run: dotnet nuget push "${{ github.workspace }}/artifacts/${{ steps.set_artifact.outputs.base }}.nupkg" --source "https://api.nuget.org/v3/index.json" --api-key "${{ secrets.NUGET_API_KEY }}"
