--- a/src/Viam.Serialization/Viam.Serialization.csproj
+++ b/src/Viam.Serialization/Viam.Serialization.csproj
@@ -21,16 +21,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Viam.Serialization.Analyzer\Viam.Serialization.Analyzer.csproj"
-                      OutputItemType="Analyzer"
-                      ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\Viam.Serialization.Analyzer\Viam.Serialization.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\src\Viam.Serialization.Analyzer\bin\$(Configuration)\netstandard2.0\Viam.Serialization.Analyzer.dll"
-          Pack="true"
-          PackagePath="analyzers/dotnet/cs"
-          Visible="false" />
+    <None Include="..\..\src\Viam.Serialization.Analyzer\bin\$(Configuration)\netstandard2.0\Viam.Serialization.Analyzer.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
   </ItemGroup>
 
 </Project>
